[package]
name = "rkbx_osc"
version = "0.2.3"
edition = "2021"
authors = ["grufkork"]
repository = "https://github.com/grufkork/rkbx_osc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-arms = {version = "0.9.4", features = ["external"]}
winapi = "0.3.9"
rosc = "0.10.1"
serde_json = "1.0.113"
serde = {version="1.0.196", features=["derive"]}
rusty_link = "0.4.2"
