[package]
name = "rkbx_osc"
version = "0.2.4"
edition = "2021"
authors = ["grufkork"]
repository = "https://github.com/MichelDEVde/rkbx_osc.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-arms = {version = "0.9.4", features = ["external"]}
winapi = "0.3.9"
rosc = "0.10.1"
